Stabilize Rust substrate bridge and strict drift gates